# ghmm

./: .gitignore  .hlint  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  ghmm.cabal  stack.yaml
app/: Configuration.hs  HmacMiddleware.hs  LogFormatter.hs  Main.hs
cfg/: dev.example
scripts/: cleanup-hooks.sh  create-hook.sh  ping-hook.sh
src/: App.hs  Config.hs  Configuration.hs  EventMessageRendering.hs  GithubApi.hs  JsonOptions.hs  Lib.hs  MattermostApi.hs  MessageRendering.hs  Util.hs
src/Config/: Env.hs  Types.hs  Yaml.hs
src/Config/Env/: Util.hs
src/Data/ByteString/: Aeson.hs
src/Github/: Api.hs
src/Github/Event/: Filter.hs  Json.hs  Message.hs  Predicate.hs  Types.hs
src/Mattermost/: Api.hs  Github.hs  Message.hs  Types.hs
src/Mattermost/Github/: Client.hs  Message.hs
src/Message/: Markdown.hs  Util.hs
src/Servant/Client/: Aeson.hs
src/System/Log/: Aeson.hs
test/: MattermostApiSpec.hs  MessageRenderingSpec.hs
test-live/: Main.hs
test/Config/: EnvSpec.hs  YamlSpec.hs
test/Github/Event/: JsonSpec.hs
test/Mattermost/Github/: ClientSpec.hs
test/Message/: MarkdownSpec.hs  UtilSpec.hs
test/System/Log/Priority/: AesonSpec.hs
test/data/config/: config_full.yml  config_sparse.yml
test/data/event/: issuecomment_closing.json  pullrequest_merge.json  push_null.json  push_pr_merge.json  status_with_description.json
