name:                ghmm
version:             0.1.0.0
synopsis:            GitHub Mattermost Relay Bot
description:         Please see README.md
homepage:            https://github.com/UlfS/ghmm#readme
license:             MIT
license-file:        LICENSE
author:              Ulf Sauer
maintainer:          ulf.sauer@gmail.com
copyright:           2017 Ulf Sauer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
-- http://stackoverflow.com/questions/29361413/including-data-files-only-in-cabal-test-suites
-- https://github.com/commercialhaskell/stack/issues/548
extra-source-files:  test/data/pushevent.json
                   , test/data/pullrequestevent.json
                   , test/data/statusevent.json
                   , test/data/issuecommentevent.json

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , App
                     , Github.Api
                     , Github.Event.Message
                     , Github.Event.Types
                     , Github.Event.Json
                     , Mattermost.Api
                     , Mattermost.Types
                     , Mattermost.Github
                     , Message.Markdown
                     , Message.Util
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , aeson
                     , servant-server
                     , servant-client
                     , wai
                     , warp
                     , bytestring
                     , text
                     , http-client
                     , transformers
                     , bytestring
                     , monad-control
                     , hslogger
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports -fwarn-incomplete-patterns

executable ghmm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       HmacMiddleware
                     , Configuration
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , transformers
                     , warp
                     , wai
                     , wai-extra
                     , http-client
                     , http-client-tls
                     , cryptonite
                     , memory
                     , base16-bytestring
                     , case-insensitive
                     , word8
                     , http-types
                     , bytestring
                     , hslogger
                     , ghmm
  default-language:    Haskell2010

test-suite ghmm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Message.UtilSpec
                     , Github.Event.JsonSpec
  build-depends:       base
                     , ghmm
                     , hspec
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , bytestring
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/UlfS/ghmm
