name:                ghmm
version:             0.1.0.0
synopsis:            GitHub Mattermost Relay Bot
description:         Please see README.md
homepage:            https://github.com/UlfS/ghmm#readme
license:             MIT
license-file:        LICENSE
author:              Ulf Sauer
maintainer:          ulf.sauer@gmail.com
copyright:           2017 Ulf Sauer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
-- http://stackoverflow.com/questions/29361413/including-data-files-only-in-cabal-test-suites
-- https://github.com/commercialhaskell/stack/issues/548
extra-source-files:  test/data/event/issuecomment.json
                   , test/data/event/issuecomment_closing.json
                   , test/data/event/issues.json
                   , test/data/event/pullrequest.json
                   , test/data/event/pullrequest_merge.json
                   , test/data/event/pullrequestreview.json
                   , test/data/event/pullrequestreviewcomment.json
                   , test/data/event/push.json
                   , test/data/event/push_null.json
                   , test/data/event/push_pr_merge.json
                   , test/data/event/status.json
                   , test/data/event/status_with_description.json
                   , test/data/config/config_full.yml
                   , test/data/config/config_sparse.yml

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Config
                     , Config.Types
                     , Github.Api
                     , Github.Event.Predicate
                     , Github.Event.Json
                     , Github.Event.Types
                     , JsonOptions
                     , Lib
                     , Mattermost.Api
                     , Mattermost.Github.Client
                     , Mattermost.Github.Message
                     , Mattermost.Types
                     , Message.Markdown
                     , Message.Util
                     , Util
  other-modules:       Config.Yaml
                     , Config.Env
                     , Config.Env.Util
                     , Data.ByteString.Aeson
                     , Servant.Client.Aeson
                     , System.Log.Aeson

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , exceptions
                     , hslogger
                     , http-client
                     , monad-control
                     , mtl
                     , servant-client
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -fwarn-unused-imports
                       -fwarn-incomplete-patterns
                       -Wunused-matches
                       -Wmissing-signatures
                       -Wname-shadowing

executable ghmm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       HmacMiddleware
                     , LogFormatter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ghmm
                     , ansi-terminal
                     , base16-bytestring
                     , bytestring
                     , case-insensitive
                     , cryptonite
                     , hslogger
                     , http-client
                     , http-client-tls
                     , http-types
                     , memory
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp
                     , word8
                     , yaml
                     , aeson
                     , containers
                     , unordered-containers
  default-language:    Haskell2010

executable ghmm-test-exe
  hs-source-dirs:      test-live
  main-is:             Main.hs
  other-modules:
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ghmm
                     , aeson
                     , bytestring
                     , containers
                     , http-client
                     , http-client-tls
                     , servant-client
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite ghmm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Config.EnvSpec
                     , Config.YamlSpec
                     , Github.Event.JsonSpec
                     , Mattermost.Github.ClientSpec
                     , Message.MarkdownSpec
                     , Message.UtilSpec
                     , System.Log.Priority.AesonSpec
  build-depends:       base
                     , containers
                     , ghmm
                     , aeson
                     , bytestring
                     , hslogger
                     , hspec
                     , QuickCheck
                     , quickcheck-instances
                     , servant-client
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/UlfS/ghmm
